Building out logic to prevent ship overlap

--- a/Battle.css
+++ b/Battle.css
@@ -25,32 +25,37 @@ h1 {
 }
 
 #gridTitle {
-  /* display: flex; */
   color: white;
   font-size: 30px;
-
+  
 }
-.container1 {
+
+#gridTitle2 {
+  color: white;
+  font-size: 30px;
+}
+
+#container1 {
   display: flex;
-  margin: 0 auto;
+  justify-content: space-evenly;
+  margin-top: 12%;
   
 }
 
-.container2 {
-  justify-content: center;
-  display: inline-block;
-  width: 300px;
-  height: 300px;
-  
+#container2 {
+  display:flex;
+  flex-direction: column;
 }
 
+#container3 {
+  display:flex;
+  flex-direction: column;
+}
 .playerBoard {
-  margin-top: 20%;
-  position: relative;
   width: 500px;
-  height: 500px;
   display: grid;
   grid-template: repeat(10, 0fr)/repeat(10, 0fr);
+  
 }
 
 .horizontal {
@@ -65,10 +70,8 @@ h1 {
   color: black;
 }
 
+
 .compBoard {
-  position: relative;
-  width: 500px;
-  height: 500px;
   display: grid;
   grid-template: repeat(10, 0fr)/repeat(10, 0fr);
 }
@@ -84,3 +87,4 @@ h1 {
   text-align: center;
   color: black;
 }
+
